examples/negative/modules/duplicate_const_decl.kai
# Negative fixture (#543 / modules): two `const` declarations with
# the same name `MAX` appear in the same module. The resolver
# rejects with "already declared", matching the duplicate `type`,
# `fn`, and `effect` cases. `register_one` previously prepended the
# second const into the env blindly so it silently shadowed the
# first.

pub const MAX : Int = 10
pub const MAX : Int = 20

fn main() : Int = MAX
